--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -5,16 +5,25 @@ input {
 
 	tcp {
 		port => 5000
+        codec => multiline {
+          pattern => "^\s"
+          what => "previous"
+        }
 	}
 }
 
 ## Add your filters / logstash plugins configuration here
+filter{
+  json{
+    source => "message"
+  }
+}
 
 output {
 	elasticsearch {
 		hosts => "elasticsearch:9200"
 		user => "elastic"
-		password => "changeme"
+		password => "Hard2Translate!"
 		ecs_compatibility => disabled
 	}
 }
