--- a/elasticsearch/Dockerfile
+++ b/elasticsearch/Dockerfile
@@ -3,5 +3,7 @@ ARG ELK_VERSION
 # https://www.docker.elastic.co/
 FROM docker.elastic.co/elasticsearch/elasticsearch:${ELK_VERSION}
 
+COPY ./config /usr/share/elasticsearch/config/
+
 # Add your elasticsearch plugins setup here
 # Example: RUN elasticsearch-plugin install analysis-icu
