--- a/extensions/metricbeat/config/metricbeat.yml
+++ b/extensions/metricbeat/config/metricbeat.yml
@@ -34,7 +34,7 @@ processors:
 output.elasticsearch:
   hosts: ['http://elasticsearch:9200']
   username: elastic
-  password: changeme
+  password: Hard2Translate!
 
 ## HTTP endpoint for health checking
 ## https://www.elastic.co/guide/en/beats/metricbeat/current/http-endpoint.html
