--- a/kibana/Dockerfile
+++ b/kibana/Dockerfile
@@ -3,5 +3,7 @@ ARG ELK_VERSION
 # https://www.docker.elastic.co/
 FROM docker.elastic.co/kibana/kibana:${ELK_VERSION}
 
+COPY ./config /usr/share/kibana/config/
+
 # Add your kibana plugins setup here
 # Example: RUN kibana-plugin install <name|url>
