--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,11 @@ version: '3.2'
 
 services:
   elasticsearch:
+    image: matecat/matesub-elk-elasticsearch
     build:
       context: elasticsearch/
       args:
         ELK_VERSION: $ELK_VERSION
-#    volumes:
-      # - ./elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro,z
-#      - elasticsearch:/usr/share/elasticsearch/data:z
     ports:
       - "9200:9200"
       - "9300:9300"
@@ -20,6 +18,7 @@ services:
       discovery.type: single-node
     networks:
       - elk
+    restart: unless-stopped
 
 #  logstash:
 #    build:
@@ -42,30 +41,30 @@ services:
 #      - elasticsearch
 
   curator:
+    image: matecat/matesub-elk-curator
     build:
       context: extensions/curator/
     networks:
       - elk
     depends_on:
       - elasticsearch
+    restart: unless-stopped
 
   kibana:
+    image: matecat/matesub-elk-kibana
     build:
       context: kibana/
       args:
         ELK_VERSION: $ELK_VERSION
-#    volumes:
-#      - ./kibana/config/kibana.yml:/usr/share/kibana/config/kibana.yml:ro,z
     ports:
       - "5601:5601"
     networks:
       - elk
     depends_on:
       - elasticsearch
+    restart: unless-stopped
+
 
 networks:
   elk:
     driver: bridge
-
-#volumes:
-#  elasticsearch:
