--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,29 +1,35 @@
 input {
+
 	beats {
 		port => 5044
 	}
 
 	tcp {
-		port => 5000
-        codec => multiline {
-          pattern => "^\s"
-          what => "previous"
-        }
-	}
+       mode => server
+       host => "0.0.0.0"
+       port => 5000
+       codec => multiline {
+         pattern => "^%{TIMESTAMP_ISO8601}"
+         negate => true
+         what => "previous"
+       }
+    }
+
 }
 
 ## Add your filters / logstash plugins configuration here
-filter{
-  json{
-    source => "message"
-  }
-}
+filter { }
 
 output {
 	elasticsearch {
-		hosts => "elasticsearch:9200"
+		hosts => "localhost:9200"
+		#hosts => "internal-matesub-elk-logger-1671130209.eu-west-1.elb.amazonaws.com:9200"
 		user => "elastic"
 		password => "Hard2Translate!"
 		ecs_compatibility => disabled
 	}
 }
+
+#output {
+#    stdout { codec => rubydebug }
+#}
