Fix elasticsearch endpoints

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -22,14 +22,9 @@ filter { }
 
 output {
 	elasticsearch {
-		hosts => "localhost:9200"
-		#hosts => "internal-matesub-elk-logger-1671130209.eu-west-1.elb.amazonaws.com:9200"
+		hosts => "internal-matesub-elk-logger-1671130209.eu-west-1.elb.amazonaws.com:9200"
 		user => "elastic"
 		password => "Hard2Translate!"
 		ecs_compatibility => disabled
 	}
 }
-
-#output {
-#    stdout { codec => rubydebug }
-#}
