--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -13,6 +13,15 @@ input {
          negate => true
          what => "previous"
        }
+       type => java
+    }
+
+	tcp {
+       mode => server
+       host => "0.0.0.0"
+       port => 5001
+       codec => "json"
+       type => metrics
     }
 
 }
@@ -21,10 +30,19 @@ input {
 filter { }
 
 output {
-	elasticsearch {
-		hosts => "internal-matesub-elk-logger-1671130209.eu-west-1.elb.amazonaws.com:9200"
-		user => "elastic"
-		password => "Hard2Translate!"
-		ecs_compatibility => disabled
-	}
+
+   elasticsearch {
+       hosts => "internal-matesub-elk-logger-1671130209.eu-west-1.elb.amazonaws.com:9200"
+       user => "elastic"
+       password => "Hard2Translate!"
+       ecs_compatibility => disabled
+       index => "%{[type]}-%{+YYYY.MM.dd}"
+   }
+
+#    stdout {
+#        codec =>  rubydebug {
+#          metadata => true
+#        }
+#    }
+
 }
