Fixed logstash index name

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -36,7 +36,7 @@ output {
        user => "elastic"
        password => "Hard2Translate!"
        ecs_compatibility => disabled
-       index => "%{[type]}-%{+YYYY.MM.dd}"
+       index => "%{[type]}-%{+YYYY.MM}"
    }
 
 #    stdout {
