Fixed logstash -> elasticsearch communication through nlb

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -32,7 +32,7 @@ filter { }
 output {
 
    elasticsearch {
-       hosts => "internal-matesub-elk-logger-1671130209.eu-west-1.elb.amazonaws.com:9200"
+       hosts => "elk.matesub.com:9200"
        user => "elastic"
        password => "Hard2Translate!"
        ecs_compatibility => disabled
