--- a/logstash/config/logstash.yml
+++ b/logstash/config/logstash.yml
@@ -4,7 +4,7 @@
 #
 http.host: "0.0.0.0"
 #xpack.monitoring.elasticsearch.hosts: [ "http://localhost:9200" ]
-xpack.monitoring.elasticsearch.hosts: [ "http://internal-matesub-elk-logger-1671130209.eu-west-1.elb.amazonaws.com:9200" ]
+xpack.monitoring.elasticsearch.hosts: [ "http://elk.matesub.com:9200" ]
 
 ## X-Pack security credentials
 #
