--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -8,11 +8,7 @@ input {
        mode => server
        host => "0.0.0.0"
        port => 5000
-       codec => multiline {
-         pattern => "^%{TIMESTAMP_ISO8601}"
-         negate => true
-         what => "previous"
-       }
+       codec => "json"
        type => java
     }
 
