--- a/elasticsearch/config/elasticsearch.yml
+++ b/elasticsearch/config/elasticsearch.yml
@@ -11,3 +11,4 @@ network.host: 0.0.0.0
 xpack.license.self_generated.type: basic
 xpack.security.enabled: false
 xpack.monitoring.collection.enabled: true
+ingest.geoip.downloader.enabled: false
